# python-project-52

./: .gitignore  Makefile  README.md  build.sh  index.html  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  settings.py  sonar-project.properties  urls.py
.github/workflows/: sonarcloud.yml
static/: index.html
task_manager/: asgi.py  settings.py  urls.py  wsgi.py
task_manager/labels/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/templates/task_labels/: create.html  delete.html  update.html
task_manager/statuses/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py
task_manager/tasks/templates/tasks/: create.html  (+4 more)
task_manager/templates/: base.html  index.html  test_rollbar.html
task_manager/users/: apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
templates/: base.html  index.html  test_rollbar.html
templates/base_template/: base.html  create.html  delete.html  index.html  login.html  update.html  users.html
templates/label_template/: create.html  delete.html  labels.html  update.html
templates/status_template/: create.html  delete.html  statuses.html  update.html
templates/task_template/: create.html  delete.html  detail.html  tasks.html  update.html
tests/: conftest.py  test_50_tasks.py
(+7 files in other folders)
