[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.6",
    "python-dotenv>=1.1.1",
]

[tool.ruff]
exclude = [
    "migrations",
    "**/settings.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]
